Add missing translation in the settings dialog

--- a/lang/de.json
+++ b/lang/de.json
@@ -217,6 +217,9 @@
   "MB.YouAreHit": "Du bist getroffen",
   "MB.YouHaveNoFeats": "Du hast keine Taten übrig",
   "MB.YouHaveNoScrolls": "Du hast keine Schriftrollen",
+  "MB.editAllowedScvmClassesMenu": "Allowed classes",
+  "MB.editAllowedScvmClassesMenuHint": "Edit the allowed classes in the character generator.",
+  "MB.editAllowedScvmClassesMenuButtonLabel": "Edit",  
   "MB.AllowedScvmClassesEdit": "Edit allowed classes",
   "MB.AllowedScvmClassesSelect": "Select allowed classes"
 }
