Add drag and drop container to follower, character and container. Refactor the data preparation for actors

--- a/lang/de.json
+++ b/lang/de.json
@@ -30,16 +30,15 @@
   "MB.BrokenHemorrhageLastHour": "DR18 für die letzte Stunde",
   "MB.BrokenSeveredLimb": "Brüche oder abgetrennte Gliedmaßen. Handlungsunfähig für {rounds} {roundsWord} danach mit {hp} HP.",
   "MB.BrokenYouAreDead": "Du bist tot.",
+  "MB.Cancel": "Cancel",
   "MB.CarryWeight": "Traglast",
   "MB.Carrying": "Getragen",
   "MB.CarryingCapacity": "Tragkapazität",
   "MB.CarryingRule": "STR+8 tragbare Gegenstände oder DR+2 on AGI/STR Probe.",
-  "MB.Cancel": "Abbrechen",
+  "MB.CarryingRuleNoPenalty": "STR+8 max carried items.",
   "MB.Class": "Klasse",
   "MB.ClassAbilities": "Fähigkeiten",
-  "MB.ContainerAmountIn": "Im Gepäck",
   "MB.ContainerHolding": "Holding",
-  "MB.ContainerHolds": "hält",
   "MB.ContainerSpace": "Maße",
   "MB.CreateNewItem": "Erstelle neues Item",
   "MB.CreatureArmor": "Rüstung",
@@ -85,12 +84,15 @@
   "MB.Items": "Items",
   "MB.ItemAgilityDRModifier": "Agilität DR Modifikator",
   "MB.ItemCapacity": "Kapazität",
+  "MB.ItemCarried": "Carried",
   "MB.ItemCreate": "Erstelle Item",
   "MB.ItemCritOn": "Crit On",
   "MB.ItemDamageDie": "Schadenswürfel",
   "MB.ItemDamageReductionDie": "Schadensreduktionswürfel",
   "MB.ItemDefenseDRModifier": "Verteidigungs DR Modifikator",
   "MB.ItemDelete": "Lösche Item",
+  "MB.ItemDeleteMessage": "Are you sure you want to delete the container and all the items?",
+  "MB.ItemDropped": "Dropped",
   "MB.ItemEdit": "Bearbeite Item",
   "MB.ItemEquipped": "Ausgerüstet",
   "MB.ItemFumbleOn": "Fumble On",
@@ -123,6 +125,7 @@
   "MB.NoEffect": "Kein Effekt",
   "MB.NoPowerUsesRemaining": "Keine Macht übrig",
   "MB.Omens": "Omen",
+  "MB.OmensHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fumble",
   "MB.Outcome": "Auswirkung",
   "MB.Party": "Party",
   "MB.PartyInitiative": "Party Initiative",
