--- a/lang/fr.json
+++ b/lang/fr.json
@@ -30,16 +30,15 @@
   "MB.BrokenHemorrhageLastHour": "DR18 la dernière heure",
   "MB.BrokenSeveredLimb": "Membre cassé ou sectionné. Vous ne pouvez pas agir pendant {rounds} {roundsWord}, après redevenez actif avec {hp} PV.",
   "MB.BrokenYouAreDead": "Vous êtes mort.",
+  "MB.Cancel": "Annuler",
   "MB.CarryWeight": "Poids porté",
   "MB.Carrying": "Charge",
   "MB.CarryingCapacity": "Capacité de charge",
   "MB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
-  "MB.Cancel": "Annuler",
+  "MB.CarryingRuleNoPenalty": "STR+8 max carried items.",
   "MB.Class": "Classe",
   "MB.ClassAbilities": "Caractéristiques",
-  "MB.ContainerAmountIn": "Dans le container",
   "MB.ContainerHolding": "Holding",
-  "MB.ContainerHolds": "holds",
   "MB.ContainerSpace": "Place dans le container",
   "MB.CreateNewItem": "Créer un nouvel objet",
   "MB.CreatureArmor": "Armure",
@@ -85,12 +84,15 @@
   "MB.Items": "Objets",
   "MB.ItemAgilityDRModifier": "Agility DR Modifier",
   "MB.ItemCapacity": "Capacité",
+  "MB.ItemCarried": "Carried",
   "MB.ItemCreate": "Crée un objet",
   "MB.ItemCritOn": "Crit On",
   "MB.ItemDamageDie": "Dés de dégâts",
   "MB.ItemDamageReductionDie": "Damage Reduction Die",
   "MB.ItemDefenseDRModifier": "Defense DR Modifier",
   "MB.ItemDelete": "Supprimer l'objet",
+  "MB.ItemDeleteMessage": "Voulez-vous vraiment supprimer le conteneur et tous ses éléments?",
+  "MB.ItemDropped": "Dropped",
   "MB.ItemEdit": "Edit Item",
   "MB.ItemEquipped": "Equipped",
   "MB.ItemFumbleOn": "Fumble On",
@@ -123,6 +125,7 @@
   "MB.NoEffect": "Pas d'effet",
   "MB.NoPowerUsesRemaining": "Aucun utilisation du Pouvoir restantes",
   "MB.Omens": "Présages",
+  "MB.OmensHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fumble",
   "MB.Outcome": "Résultat",
   "MB.Party": "Groupe",
   "MB.PartyInitiative": "Initiative du groupe",
@@ -210,9 +213,9 @@
   "MB.WeaponTypeRanged": "Distance",
   "MB.Wield": "Manier",
   "MB.WieldAPower": "Manier un pouvoir",
+  "MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
   "MB.WieldAPowerFumble": "Fumble - Lancez sur Arcane Catastrophe.",
   "MB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr",
-  "MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
   "MB.YouAreHit": "Vous êtes touchés !",
   "MB.YouHaveNoFeats": "Vous n'avez pas de don",
   "MB.YouHaveNoScrolls": "Vous n'avez pas de parchemin"
