--- a/lang/sv.json
+++ b/lang/sv.json
@@ -35,11 +35,10 @@
   "MB.Carrying": "Bärande",
   "MB.CarryingCapacity": "Bärförmåga",
   "MB.CarryingRule": "STY+8 objekt eller SG+2 SMI/STY test.",
+  "MB.CarryingRuleNoPenalty": "STR+8 max carried items.",
   "MB.Class": "Klass",
   "MB.ClassAbilities": "Egenskaper",
-  "MB.ContainerAmountIn": "I en Behållare",
   "MB.ContainerHolding": "Bärande",
-  "MB.ContainerHolds": "håller",
   "MB.ContainerSpace": "Volym",
   "MB.CreateNewItem": "Skapa Nytt Objekt",
   "MB.CreatureArmor": "Rustning",
@@ -85,12 +84,15 @@
   "MB.Items": "Objekt",
   "MB.ItemAgilityDRModifier": "Smidighet SG Modifikation",
   "MB.ItemCapacity": "Kapacitet",
+  "MB.ItemCarried": "Carried",
   "MB.ItemCreate": "Skapa Objekt",
   "MB.ItemCritOn": "Crit On",
   "MB.ItemDamageDie": "Skadetärning",
   "MB.ItemDamageReductionDie": "Skadreduktion Tärning",
   "MB.ItemDefenseDRModifier": "Försvar SG Modifikation",
   "MB.ItemDelete": "Radera Objekt",
+  "MB.ItemDeleteMessage": "Are you sure you want to delete the container and all the items?",
+  "MB.ItemDropped": "Dropped",
   "MB.ItemEdit": "Redigera Objekt",
   "MB.ItemEquipped": "Utrustad",
   "MB.ItemFumbleOn": "Fumble On",
@@ -123,14 +125,16 @@
   "MB.NoEffect": "Ingen effekt",
   "MB.NoPowerUsesRemaining": "Nollkraftnummer",
   "MB.Omens": "Järtecken",
+  "MB.OmensHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fumble",
   "MB.Outcome": "Resultat",
   "MB.Party": "Grupp",
   "MB.PartyInitiative": "Grupp Initiativ",
   "MB.PerDay": "Per Dygn",
   "MB.PerRest": "Per Vila",
-  "MB.PowerUsesRemaining": "Gånger",
+  "MB.RollMacro": "Roll Macro",
   "MB.Powers": "Krafter",
   "MB.PowersPerDayText": "NÄR+t4 antal per dygn",
+  "MB.PowerUsesRemaining": "Gånger",
   "MB.Quantity": "Kvantitet",
   "MB.Reaction": "Reaktion",
   "MB.ReactionAlmostFriendly": "Veligt vänlig",
@@ -185,6 +189,7 @@
   "MB.ShieldUseText": "-1 skada, eller låt bryta sönder for at ignorera en attack",
   "MB.Silver": "Silver",
   "MB.StandsFirm": "Står fast",
+  "MB.Starting": "Starting",
   "MB.Starvation": "Svält",
   "MB.Success": "Framgång",
   "MB.TabContents": "Innehåll",
@@ -211,6 +216,7 @@
   "MB.WieldAPowerDizzy": "blir sluddrig i en timme och kan inte nyttja Krafter under den tiden",
   "MB.WieldAPowerFumble": "Fummel - Slå Arcane Catastrophe.",
   "MB.WieldAPowerText": "NÄR SG12 eller -t2 TP och inga Krafter i 1 tim.",
+  "MB.YouAreHit": "You are Hit",
   "MB.YouHaveNoFeats": "Du har inga Förmågor",
   "MB.YouHaveNoScrolls": "Du har inga Rullar"
 }
