Fix translation key case and sorting

--- a/lang/de.json
+++ b/lang/de.json
@@ -10,6 +10,8 @@
   "MB.AbilityToughnessAbbrev": "ZÄH",
   "MB.ActorNotInEncounter": "Dieser Akteur ist nicht Teil des Kampfgeschehens",
   "MB.Add": "Hinzufügen",
+  "MB.AllowedScvmClassesEdit": "Edit allowed classes",
+  "MB.AllowedScvmClassesSelect": "Select allowed classes",
   "MB.AlternateName": "Alternativer Name",
   "MB.Armor": "Rüstung",
   "MB.ArmorCurrentTier": "Momentane Stufe",
@@ -35,7 +37,6 @@
   "MB.CarryingCapacity": "Tragkapazität",
   "MB.CarryingRule": "STR+8 tragbare Gegenstände oder DR+2 on AGI/STR Probe.",
   "MB.Cancel": "Abbrechen",
-  "MB.Ok": "Ok",
   "MB.Class": "Klasse",
   "MB.ClassAbilities": "Fähigkeiten",
   "MB.ContainerAmountIn": "Im Gepäck",
@@ -58,6 +59,9 @@
   "MB.Dice": "Würfel",
   "MB.Dodge": "Ausweichen",
   "MB.DR": "DR",
+  "MB.EditAllowedScvmClassesMenu": "Allowed classes",
+  "MB.EditAllowedScvmClassesMenuHint": "Edit the allowed classes in the character generator.",
+  "MB.EditAllowedScvmClassesMenuButtonLabel": "Edit",
   "MB.Encumbered": "Überladen",
   "MB.EquipArmorToAbsorb": "Lege eine Rüstung an um Schaden zu verringern.",
   "MB.EquipAWeaponToAttack": "Lege eine Waffe an um anzugreifen.",
@@ -123,6 +127,7 @@
   "MB.NoActiveEncounter": "Keine aktive Begegnung",
   "MB.NoEffect": "Kein Effekt",
   "MB.NoPowerUsesRemaining": "Keine Macht übrig",
+  "MB.Ok": "Ok",
   "MB.Omens": "Omen",
   "MB.Outcome": "Auswirkung",
   "MB.Party": "Party",
@@ -216,10 +221,5 @@
   "MB.WieldAPowerDizzy": "sei benommen und übe keine Macht für eine Stunde aus",
   "MB.YouAreHit": "Du bist getroffen",
   "MB.YouHaveNoFeats": "Du hast keine Taten übrig",
-  "MB.YouHaveNoScrolls": "Du hast keine Schriftrollen",
-  "MB.editAllowedScvmClassesMenu": "Allowed classes",
-  "MB.editAllowedScvmClassesMenuHint": "Edit the allowed classes in the character generator.",
-  "MB.editAllowedScvmClassesMenuButtonLabel": "Edit",
-  "MB.AllowedScvmClassesEdit": "Edit allowed classes",
-  "MB.AllowedScvmClassesSelect": "Select allowed classes"
+  "MB.YouHaveNoScrolls": "Du hast keine Schriftrollen"
 }
