--- a/lang/en.json
+++ b/lang/en.json
@@ -10,6 +10,8 @@
   "MB.AbilityToughnessAbbrev": "TOU",
   "MB.ActorNotInEncounter": "This actor isn't part of the current combat encounter",
   "MB.Add": "Add",
+  "MB.AllowedScvmClassesEdit": "Edit allowed classes",
+  "MB.AllowedScvmClassesSelect": "Select allowed classes",
   "MB.AlternateName": "Alternate Name",
   "MB.Armor": "Armor",
   "MB.ArmorCurrentTier": "Current Tier",
@@ -36,7 +38,6 @@
   "MB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
   "MB.CarryingRuleNoPenalty": "STR+8 max carried items.",
   "MB.Cancel": "Cancel",
-  "MB.Ok": "Ok",
   "MB.Class": "Class",
   "MB.ClassAbilities": "Abilities",
   "MB.ContainerAmountIn": "In Container",
@@ -59,6 +60,9 @@
   "MB.Dice": "Dice",
   "MB.Dodge": "Dodge",
   "MB.DR": "DR",
+  "MB.EditAllowedScvmClassesMenu": "Allowed classes",
+  "MB.EditAllowedScvmClassesMenuHint": "Edit the allowed classes in the character generator.",
+  "MB.EditAllowedScvmClassesMenuButtonLabel": "Edit",
   "MB.Encumbered": "Encumbered",
   "MB.EquipArmorToAbsorb": "Equip armor to absorb damage.",
   "MB.EquipAWeaponToAttack": "Equip a weapon to attack.",
@@ -124,6 +128,7 @@
   "MB.NoActiveEncounter": "No Active Encounter",
   "MB.NoEffect": "No effect",
   "MB.NoPowerUsesRemaining": "No Power uses remaining",
+  "MB.Ok": "Ok",
   "MB.Omens": "Omens",
   "MB.OmensHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fumble",
   "MB.Outcome": "Outcome",
@@ -218,10 +223,5 @@
   "MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
   "MB.YouAreHit": "You are Hit",
   "MB.YouHaveNoFeats": "You have no Feats",
-  "MB.YouHaveNoScrolls": "You have no Scrolls",
-  "MB.editAllowedScvmClassesMenu": "Allowed classes",
-  "MB.editAllowedScvmClassesMenuHint": "Edit the allowed classes in the character generator.",
-  "MB.editAllowedScvmClassesMenuButtonLabel": "Edit",
-  "MB.AllowedScvmClassesEdit": "Edit allowed classes",
-  "MB.AllowedScvmClassesSelect": "Select allowed classes"
+  "MB.YouHaveNoScrolls": "You have no Scrolls"
 }
