--- a/lang/sv.json
+++ b/lang/sv.json
@@ -10,6 +10,8 @@
   "MB.AbilityToughnessAbbrev": "TÅL",
   "MB.ActorNotInEncounter": "This actor isn't part of the current combat encounter",
   "MB.Add": "Lägg till",
+  "MB.AllowedScvmClassesEdit": "Edit allowed classes",
+  "MB.AllowedScvmClassesSelect": "Select allowed classes",
   "MB.AlternateName": "Alternativt Namn",
   "MB.Armor": "Rustning",
   "MB.ArmorCurrentTier": "Nuvarande Nivå",
@@ -31,7 +33,6 @@
   "MB.BrokenSeveredLimb": "Broken or severed limb. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
   "MB.BrokenYouAreDead": "You are dead.",
   "MB.Cancel": "Avbryt",
-  "MB.Ok": "Ok",
   "MB.CarryWeight": "Vikt",
   "MB.Carrying": "Bärande",
   "MB.CarryingCapacity": "Bärförmåga",
@@ -58,6 +59,9 @@
   "MB.Dice": "Tärningar",
   "MB.Dodge": "Undvika",
   "MB.DR": "SG",
+  "MB.EditAllowedScvmClassesMenu": "Allowed classes",
+  "MB.EditAllowedScvmClassesMenuHint": "Edit the allowed classes in the character generator.",
+  "MB.EditAllowedScvmClassesMenuButtonLabel": "Edit",
   "MB.Encumbered": "Överbelastad",
   "MB.EquipArmorToAbsorb": "Utrusta rustning för absorbera skador.",
   "MB.EquipAWeaponToAttack": "Utrusta ett vapen för att attackera.",
@@ -123,6 +127,7 @@
   "MB.NoActiveEncounter": "Inget aktivt möte",
   "MB.NoEffect": "Ingen effekt",
   "MB.NoPowerUsesRemaining": "Nollkraftnummer",
+  "MB.Ok": "Ok",
   "MB.Omens": "Järtecken",
   "MB.Outcome": "Resultat",
   "MB.Party": "Grupp",
@@ -213,10 +218,5 @@
   "MB.WieldAPowerFumble": "Fummel - Slå Arcane Catastrophe.",
   "MB.WieldAPowerText": "NÄR SG12 eller -t2 TP och inga Krafter i 1 tim.",
   "MB.YouHaveNoFeats": "Du har inga Förmågor",
-  "MB.YouHaveNoScrolls": "Du har inga Rullar",
-  "MB.editAllowedScvmClassesMenu": "Allowed classes",
-  "MB.editAllowedScvmClassesMenuHint": "Edit the allowed classes in the character generator.",
-  "MB.editAllowedScvmClassesMenuButtonLabel": "Edit",
-  "MB.AllowedScvmClassesEdit": "Edit allowed classes",
-  "MB.AllowedScvmClassesSelect": "Select allowed classes"
+  "MB.YouHaveNoScrolls": "Du har inga Rullar"
 }
