--- a/lang/fr.json
+++ b/lang/fr.json
@@ -10,6 +10,8 @@
   "MB.AbilityToughnessAbbrev": "CON",
   "MB.ActorNotInEncounter": "Cet acteur ne participe pas au combat en cours",
   "MB.Add": "Ajouter",
+  "MB.AllowedScvmClassesEdit": "Editer les classes permises",
+  "MB.AllowedScvmClassesSelect": "Choisir les classes permises",
   "MB.AlternateName": "Nom alternatif",
   "MB.Armor": "Armure",
   "MB.ArmorCurrentTier": "Current Tier",
@@ -35,7 +37,6 @@
   "MB.CarryingCapacity": "Capacité de charge",
   "MB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
   "MB.Cancel": "Annuler",
-  "MB.Ok": "Ok",
   "MB.Class": "Classe",
   "MB.ClassAbilities": "Caractéristiques",
   "MB.ContainerAmountIn": "Dans le container",
@@ -58,6 +59,9 @@
   "MB.Dice": "Dés",
   "MB.Dodge": "Eviter",
   "MB.DR": "DR",
+  "MB.EditAllowedScvmClassesMenu": "Classes permises",
+  "MB.EditAllowedScvmClassesMenuHint": "Permets d'éditer les classes permises dans le générateur de personnage.",
+  "MB.EditAllowedScvmClassesMenuButtonLabel": "Editer",
   "MB.Encumbered": "Encombré",
   "MB.EquipArmorToAbsorb": "Equiper une armure pour absorber les dégâts.",
   "MB.EquipAWeaponToAttack": "Equiper une arme pour attaquer.",
@@ -123,6 +127,7 @@
   "MB.NoActiveEncounter": "Pas d'adversaire actif",
   "MB.NoEffect": "Pas d'effet",
   "MB.NoPowerUsesRemaining": "Aucun utilisation du Pouvoir restantes",
+  "MB.Ok": "Ok",
   "MB.Omens": "Présages",
   "MB.Outcome": "Résultat",
   "MB.Party": "Groupe",
@@ -216,10 +221,5 @@
   "MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
   "MB.YouAreHit": "Vous êtes touchés !",
   "MB.YouHaveNoFeats": "Vous n'avez pas de don",
-  "MB.YouHaveNoScrolls": "Vous n'avez pas de parchemin",
-  "MB.editAllowedScvmClassesMenu": "Classes permises",
-  "MB.editAllowedScvmClassesMenuHint": "Permets d'éditer les classes permises dans le générateur de personnage.",
-  "MB.editAllowedScvmClassesMenuButtonLabel": "Editer",
-  "MB.AllowedScvmClassesEdit": "Editer les classes permises",
-  "MB.AllowedScvmClassesSelect": "Choisir les classes permises"
+  "MB.YouHaveNoScrolls": "Vous n'avez pas de parchemin"
 }
