--- a/lang/de.json
+++ b/lang/de.json
@@ -10,6 +10,8 @@
   "MB.AbilityToughnessAbbrev": "ZÄH",
   "MB.ActorNotInEncounter": "Dieser Akteur ist nicht Teil des Kampfgeschehens",
   "MB.Add": "Hinzufügen",
+  "MB.AllowedScvmClassesEdit": "Edit allowed classes",
+  "MB.AllowedScvmClassesSelect": "Select allowed classes",
   "MB.AlternateName": "Alternativer Name",
   "MB.Armor": "Rüstung",
   "MB.ArmorCurrentTier": "Momentane Stufe",
@@ -57,6 +59,9 @@
   "MB.Dice": "Würfel",
   "MB.Dodge": "Ausweichen",
   "MB.DR": "DR",
+  "MB.EditAllowedScvmClassesMenu": "Allowed classes",
+  "MB.EditAllowedScvmClassesMenuHint": "Edit the allowed classes in the character generator.",
+  "MB.EditAllowedScvmClassesMenuButtonLabel": "Edit",
   "MB.Encumbered": "Überladen",
   "MB.EquipArmorToAbsorb": "Lege eine Rüstung an um Schaden zu verringern.",
   "MB.EquipAWeaponToAttack": "Lege eine Waffe an um anzugreifen.",
@@ -122,6 +127,7 @@
   "MB.NoActiveEncounter": "Keine aktive Begegnung",
   "MB.NoEffect": "Kein Effekt",
   "MB.NoPowerUsesRemaining": "Keine Macht übrig",
+  "MB.Ok": "Ok",
   "MB.Omens": "Omen",
   "MB.Outcome": "Auswirkung",
   "MB.Party": "Party",
