Add drag and drop container to follower, character and container. Refactor the data preparation for actors (#143)
Co-authored-by: Matt McGlincy <mattmcglincy@gmail.com>

--- a/lang/en.json
+++ b/lang/en.json
@@ -32,17 +32,15 @@
   "MB.BrokenHemorrhageLastHour": "DR18 the last hour",
   "MB.BrokenSeveredLimb": "Broken or severed limb. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
   "MB.BrokenYouAreDead": "You are dead.",
+  "MB.Cancel": "Cancel",
   "MB.CarryWeight": "Carry Weight",
   "MB.Carrying": "Carrying",
   "MB.CarryingCapacity": "Carrying Capacity",
   "MB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
   "MB.CarryingRuleNoPenalty": "STR+8 max carried items.",
-  "MB.Cancel": "Cancel",
   "MB.Class": "Class",
   "MB.ClassAbilities": "Abilities",
-  "MB.ContainerAmountIn": "In Container",
   "MB.ContainerHolding": "Holding",
-  "MB.ContainerHolds": "holds",
   "MB.ContainerSpace": "Container Space",
   "MB.CreateNewItem": "Create New Item",
   "MB.CreatureArmor": "Armor",
@@ -91,15 +89,18 @@
   "MB.Items": "Items",
   "MB.ItemAgilityDRModifier": "Agility DR Modifier",
   "MB.ItemCapacity": "Capacity",
+  "MB.ItemCarried": "Carried",
   "MB.ItemCreate": "Create Item",
   "MB.ItemCritOn": "Crit On",
   "MB.ItemDamageDie": "Damage Die",
   "MB.ItemDamageReductionDie": "Damage Reduction Die",
   "MB.ItemDefenseDRModifier": "Defense DR Modifier",
   "MB.ItemDelete": "Delete Item",
+  "MB.ItemDeleteMessage": "Are you sure you want to delete the container and all the items?",
+  "MB.ItemDropped": "Dropped",
   "MB.ItemEdit": "Edit Item",
-  "MB.ItemFumbleOn": "Fumble On",
   "MB.ItemEquipped": "Equipped",
+  "MB.ItemFumbleOn": "Fumble On",
   "MB.ItemHanded": "Handed",
   "MB.ItemName": "Item Name",
   "MB.ItemPrice": "Price",
@@ -218,9 +219,9 @@
   "MB.WeaponTypeRanged": "Ranged",
   "MB.Wield": "Wield",
   "MB.WieldAPower": "Wield a Power",
+  "MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
   "MB.WieldAPowerFumble": "Fumble - Roll an Arcane Catastrophe.",
   "MB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr",
-  "MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
   "MB.YouAreHit": "You are Hit",
   "MB.YouHaveNoFeats": "You have no Feats",
   "MB.YouHaveNoScrolls": "You have no Scrolls"
