Add ammo item type, and allow selecting ranged weapon ammo.

--- a/lang/de.json
+++ b/lang/de.json
@@ -106,12 +106,12 @@
   "MB.ItemName": "Item Name",
   "MB.ItemPrice": "Preis",
   "MB.ItemScrollType": "Schriftrollentyp",
+  "MB.ItemTypeAmmo": "Ammo",
   "MB.ItemTypeArmor": "Rüstung",
   "MB.ItemTypeArmorPlural": "Rüstungen",
   "MB.ItemTypeClass": "Klasse",
   "MB.ItemTypeContainer": "Behälter",
   "MB.ItemTypeFeat": "Tat",
-  "MB.ItemTypeFeatPlural": "Taten",
   "MB.ItemTypeMisc": "Sonstig",
   "MB.ItemTypeScroll": "Schriftrolle",
   "MB.ItemTypeScrollPlural": "Schriftrollen",
