--- a/lang/en.json
+++ b/lang/en.json
@@ -106,12 +106,12 @@
   "MB.ItemName": "Item Name",
   "MB.ItemPrice": "Price",
   "MB.ItemScrollType": "Scroll Type",
+  "MB.ItemTypeAmmo": "Ammo",
   "MB.ItemTypeArmor": "Armor",
   "MB.ItemTypeArmorPlural": "Armor",
   "MB.ItemTypeClass": "Class",
   "MB.ItemTypeContainer": "Container",
   "MB.ItemTypeFeat": "Feat",
-  "MB.ItemTypeFeatPlural": "Feats",
   "MB.ItemTypeMisc": "Misc",
   "MB.ItemTypeScroll": "Scroll",
   "MB.ItemTypeScrollPlural": "Scrolls",
