--- a/lang/fr.json
+++ b/lang/fr.json
@@ -106,12 +106,12 @@
   "MB.ItemName": "Nom de l'objet",
   "MB.ItemPrice": "Prix",
   "MB.ItemScrollType": "Type de parchemin",
+  "MB.ItemTypeAmmo": "Ammo",
   "MB.ItemTypeArmor": "Armure",
   "MB.ItemTypeArmorPlural": "Armure",
   "MB.ItemTypeClass": "Classe",
   "MB.ItemTypeContainer": "Container",
   "MB.ItemTypeFeat": "Don",
-  "MB.ItemTypeFeatPlural": "Dons",
   "MB.ItemTypeMisc": "Divers",
   "MB.ItemTypeScroll": "Parchemin",
   "MB.ItemTypeScrollPlural": "Parchemins",
