--- a/lang/sv.json
+++ b/lang/sv.json
@@ -106,12 +106,12 @@
   "MB.ItemName": "Objekt Namn",
   "MB.ItemPrice": "Pris",
   "MB.ItemScrollType": "Pergamentrulletyp",
+  "MB.ItemTypeAmmo": "Ammo",
   "MB.ItemTypeArmor": "Rustning",
   "MB.ItemTypeArmorPlural": "Rustning",
   "MB.ItemTypeClass": "Klass",
   "MB.ItemTypeContainer": "Behållare",
   "MB.ItemTypeFeat": "Förmåga",
-  "MB.ItemTypeFeatPlural": "Förmågor",
   "MB.ItemTypeMisc": "Diverse",
   "MB.ItemTypeScroll": "Pergamentrulle",
   "MB.ItemTypeScrollPlural": "Pergamentrullar",
