Add usesAmmo field to weapon.

--- a/lang/de.json
+++ b/lang/de.json
@@ -119,6 +119,7 @@
   "MB.ItemTypeWeapon": "Waffe",
   "MB.ItemTypeWeaponPlural": "Waffen",
   "MB.ItemUnequipped": "Unausgerüstet",
+  "MB.ItemUsesAmmo": "Uses Ammo",
   "MB.ItemWeaponType": "Waffentyp",
   "MB.Miseries": "Miserien",
   "MB.Miss": "MISS",
