--- a/lang/en.json
+++ b/lang/en.json
@@ -119,6 +119,7 @@
   "MB.ItemTypeWeapon": "Weapon",
   "MB.ItemTypeWeaponPlural": "Weapons",
   "MB.ItemUnequipped": "Unequipped",
+  "MB.ItemUsesAmmo": "Uses Ammo",
   "MB.ItemWeaponType": "Weapon Type",
   "MB.Miseries": "Miseries",
   "MB.Miss": "MISS",
