--- a/lang/fr.json
+++ b/lang/fr.json
@@ -119,6 +119,7 @@
   "MB.ItemTypeWeapon": "Arme",
   "MB.ItemTypeWeaponPlural": "Armes",
   "MB.ItemUnequipped": "Deséquipé",
+  "MB.ItemUsesAmmo": "Uses Ammo",
   "MB.ItemWeaponType": "Type d'arme",
   "MB.Miseries": "Misères",
   "MB.Miss": "MISS",
