--- a/lang/sv.json
+++ b/lang/sv.json
@@ -119,6 +119,7 @@
   "MB.ItemTypeWeapon": "Vapen",
   "MB.ItemTypeWeaponPlural": "Vapen",
   "MB.ItemUnequipped": "Outrustad",
+  "MB.ItemUsesAmmo": "Uses Ammo",
   "MB.ItemWeaponType": "Vapentyp",
   "MB.Miseries": "Plågor",
   "MB.Miss": "MISSA",
