--- a/lang/de.json
+++ b/lang/de.json
@@ -184,6 +184,8 @@
   "MB.SettingsFontScheme": "Font Schema",
   "MB.SettingsFontSchemeHint": "Wähle ein Font Schema für das UI.",
   "MB.SettingsFoundryDefault": "Foundry Standard",
+  "MB.SettingsHitAutomation": "Hit Automation",
+  "MB.SettingsHitAutomationHint": "Enable auto-resolution of hits, misses, and damage rolls.",
   "MB.SettingsLegible": "Lesbar",
   "MB.SettingsTrackAmmo": "Track Ammo",
   "MB.SettingsTrackAmmoHint": "Select and autodecrement ammo for ranged weapons.",
