--- a/lang/fr.json
+++ b/lang/fr.json
@@ -184,6 +184,8 @@
   "MB.SettingsFontScheme": "Font Scheme",
   "MB.SettingsFontSchemeHint": "Choose a font scheme for the UI.",
   "MB.SettingsFoundryDefault": "Foundry Default",
+  "MB.SettingsHitAutomation": "Hit Automation",
+  "MB.SettingsHitAutomationHint": "Enable auto-resolution of hits, misses, and damage rolls.",
   "MB.SettingsLegible": "Legible",
   "MB.SettingsTrackAmmo": "Track Ammo",
   "MB.SettingsTrackAmmoHint": "Select and autodecrement ammo for ranged weapons.",
