Add damage button to unautomated attack roll card.

--- a/lang/de.json
+++ b/lang/de.json
@@ -8,6 +8,7 @@
   "MB.AbilityStrengthAbbrev": "STR",
   "MB.AbilityToughness": "Zähigkeit",
   "MB.AbilityToughnessAbbrev": "ZÄH",
+  "MB.ActorNotFound": "Akteur nicht gefunden",
   "MB.ActorNotInEncounter": "Dieser Akteur ist nicht Teil des Kampfgeschehens",
   "MB.Add": "Hinzufügen",
   "MB.AllowedScvmClassesEdit": "Edit allowed classes",
@@ -104,6 +105,7 @@
   "MB.ItemFumbleOn": "Fumble On",
   "MB.ItemHanded": "Geführt",
   "MB.ItemName": "Item Name",
+  "MB.ItemNotFound": "Artikel nicht gefunden",
   "MB.ItemPrice": "Preis",
   "MB.ItemScrollType": "Schriftrollentyp",
   "MB.ItemTypeAmmo": "Ammo",
@@ -161,6 +163,7 @@
   "MB.RestDialogStarve": "Verhungern - 2+ Tage ohne Essen oder Trinken. Regeneriere keine Attribute, verliere d4 HP/Tag.",
   "MB.Roll": "Wurf",
   "MB.Rolls": "Würfe",
+  "MB.RollDamage": "Würfelst Schaden",
   "MB.RollFormula": "Wurf Formel",
   "MB.RollLabel": "Wurf Label",
   "MB.Round": "Runde",
