--- a/lang/en.json
+++ b/lang/en.json
@@ -8,6 +8,7 @@
   "MB.AbilityStrengthAbbrev": "STR",
   "MB.AbilityToughness": "Toughness",
   "MB.AbilityToughnessAbbrev": "TOU",
+  "MB.ActorNotFound": "Actor not found",
   "MB.ActorNotInEncounter": "This actor isn't part of the current combat encounter",
   "MB.Add": "Add",
   "MB.AllowedScvmClassesEdit": "Edit allowed classes",
@@ -104,6 +105,7 @@
   "MB.ItemFumbleOn": "Fumble On",
   "MB.ItemHanded": "Handed",
   "MB.ItemName": "Item Name",
+  "MB.ItemNotFound": "Item not found",
   "MB.ItemPrice": "Price",
   "MB.ItemScrollType": "Scroll Type",
   "MB.ItemTypeAmmo": "Ammo",
@@ -139,6 +141,7 @@
   "MB.PartyInitiative": "Party Initiative",
   "MB.PerDay": "Per Day",
   "MB.PerRest": "Per Rest",
+  "MB.RollDamage": "Roll Damage",
   "MB.RollMacro": "Roll Macro",
   "MB.Powers": "Powers",
   "MB.PowersPerDayText": "PRE+d4 times per day",
