--- a/lang/fr.json
+++ b/lang/fr.json
@@ -8,6 +8,7 @@
   "MB.AbilityStrengthAbbrev": "FOR",
   "MB.AbilityToughness": "Constitution",
   "MB.AbilityToughnessAbbrev": "CON",
+  "MB.ActorNotFound": "Acteur non-trouvé",
   "MB.ActorNotInEncounter": "Cet acteur ne participe pas au combat en cours",
   "MB.Add": "Ajouter",
   "MB.AllowedScvmClassesEdit": "Editer les classes permises",
@@ -104,6 +105,7 @@
   "MB.ItemFumbleOn": "Fumble On",
   "MB.ItemHanded": "Handed",
   "MB.ItemName": "Nom de l'objet",
+  "MB.ItemNotFound": "Objet non-trouvé",
   "MB.ItemPrice": "Prix",
   "MB.ItemScrollType": "Type de parchemin",
   "MB.ItemTypeAmmo": "Ammo",
@@ -161,6 +163,7 @@
   "MB.RestDialogStarve": "Starve - 2+ days without food or drink. Restore no stats, lose d4 HP/day.",
   "MB.Roll": "Lancer",
   "MB.Rolls": "Rolls",
+  "MB.RollDamage": "Infligez des Dégâts",
   "MB.RollFormula": "Roll Formula",
   "MB.RollLabel": "Roll Label",
   "MB.RollPartyInitiative": "Lancer l'initiative de groupe",
