--- a/lang/sv.json
+++ b/lang/sv.json
@@ -8,7 +8,8 @@
   "MB.AbilityStrengthAbbrev": "STY",
   "MB.AbilityToughness": "Tålighet",
   "MB.AbilityToughnessAbbrev": "TÅL",
-  "MB.ActorNotInEncounter": "This actor isn't part of the current combat encounter",
+  "MB.ActorNotFound": "Skådespelaren hittades inte",
+  "MB.ActorNotInEncounter": "Skådespelaren inte i aktuell strid",
   "MB.Add": "Lägg till",
   "MB.AllowedScvmClassesEdit": "Edit allowed classes",
   "MB.AllowedScvmClassesSelect": "Select allowed classes",
@@ -104,6 +105,7 @@
   "MB.ItemFumbleOn": "Fumble On",
   "MB.ItemHanded": "Räckte",
   "MB.ItemName": "Objekt Namn",
+  "MB.ItemNotFound": "Objektet hittades inte",
   "MB.ItemPrice": "Pris",
   "MB.ItemScrollType": "Pergamentrulletyp",
   "MB.ItemTypeAmmo": "Ammo",
@@ -161,6 +163,7 @@
   "MB.RestDialogStarve": "Starve - 2+ days without food or drink. Restore no stats, lose d4 HP/day.",
   "MB.Roll": "Rulla",
   "MB.Rolls": "Rullar",
+  "MB.RollDamage": "Rullar skada",
   "MB.RollFormula": "Rulla Formel",
   "MB.RollLabel": "Rulla Märka",
   "MB.RollPartyInitiative": "Rulla Grupp Initiativ",
