Rename sheet classes, and add journal sheet class.

--- a/lang/en.json
+++ b/lang/en.json
@@ -117,6 +117,7 @@
   "MB.ItemUnequipped": "Unequipped",
   "MB.ItemUsesAmmo": "Uses Ammo",
   "MB.ItemWeaponType": "Weapon Type",
+  "MB.JournalSheet": "MÖRK BORG Journal Sheet",
   "MB.Miseries": "Miseries",
   "MB.Miss": "MISS",
   "MB.Modified": "Modified",
