Sheet styling tweaks, part 1.

--- a/lang/en.json
+++ b/lang/en.json
@@ -40,6 +40,7 @@
   "MB.ContainerEmptyHelpText": "Drag items into this container.",
   "MB.ContainerHolding": "Holding",
   "MB.ContainerSpace": "Container Space",
+  "MB.CreateNewFeat": "Create New Feat",
   "MB.CreateNewItem": "Create New Item",
   "MB.CreatureArmor": "Armor",
   "MB.CreatureAttack": "Attack",
@@ -64,6 +65,7 @@
   "MB.EquipAWeaponToAttack": "Equip a weapon to attack.",
   "MB.Equipment": "Equipment",
   "MB.Failure": "Failure",
+  "MB.Feats": "Feats",
   "MB.FollowerSpeciality": "Speciality",
   "MB.FollowerTrait": "Trait",
   "MB.FollowerValue": "Value",
@@ -127,6 +129,7 @@
   "MB.MoraleFlees": "Flees",
   "MB.MoraleSurrenders": "Surrenders",
   "MB.Name": "Name",
+  "MB.NewFeat": "New feat",
   "MB.NoActiveEncounter": "No Active Encounter",
   "MB.NoEffect": "No effect",
   "MB.NoPowerUsesRemaining": "No Power uses remaining",
@@ -142,7 +145,7 @@
   "MB.RollMacro": "Roll Macro",
   "MB.Powers": "Powers",
   "MB.PowersPerDayText": "PRE+d4 times per day",
-  "MB.PowerUsesRemaining": "Uses Remaining",
+  "MB.PowerUsesRemaining": "Powers",
   "MB.Quantity": "Quantity",
   "MB.Reaction": "Reaction",
   "MB.ReactionAlmostFriendly": "Almost friendly",
@@ -150,6 +153,7 @@
   "MB.ReactionHelpful": "Helpful",
   "MB.ReactionIndifferent": "Indifferent",
   "MB.ReactionKill": "Kill!",
+  "MB.Reroll": "Reroll",
   "MB.Rest": "Rest",
   "MB.RestDialogDontEat": "Don't eat - Restore no stats.",
   "MB.RestDialogEat": "Eat - Restore stats as above, deduct food or drink.",
@@ -210,9 +214,9 @@
   "MB.TabDescription": "Description",
   "MB.TabDetails": "Details",
   "MB.TabFeats": "Feats",
-  "MB.TabObituary": "Obituary",
-  "MB.TabPowers": "Powers",
-  "MB.TabTreasures": "Treasures",
+  "MB.TabObituary": "Background",
+  "MB.TabPowers": "Special",
+  "MB.TabTreasures": "Equipment",
   "MB.TabViolence": "Violence",
   "MB.Take": "Take",
   "MB.TargetArmor": "Target Armor",
@@ -229,7 +233,7 @@
   "MB.WieldAPower": "Wield a Power",
   "MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
   "MB.WieldAPowerFumble": "Fumble - Roll an Arcane Catastrophe.",
-  "MB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr",
+  "MB.WieldAPowerText": "PRE+d4 times per day. PRE DR12 to wield or -d2 HP and no Powers for 1 hr.",
   "MB.YouAreHit": "You are Hit",
   "MB.YouHaveNoFeats": "You have no Feats",
   "MB.YouHaveNoScrolls": "You have no Scrolls"
