Finish tweaking character sheet.

--- a/lang/en.json
+++ b/lang/en.json
@@ -25,6 +25,7 @@
   "MB.ArmorTierMedium": "Medium",
   "MB.ArmorTierNone": "None",
   "MB.Attack": "Attack",
+  "MB.AttackButtonTitle": "Attack with this weapon",
   "MB.AttackCritText": "Crit: x2 damage, target armor reduced one tier.",
   "MB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
   "MB.Base": "Base",
@@ -51,6 +52,7 @@
   "MB.DamageReduction": "Damage Reduction",
   "MB.DamageReductionDie": "Damage Reduction Die",
   "MB.Defend": "Defend",
+  "MB.DefendButtonTitle": "Defend against an incoming attack",
   "MB.DefendCritText": "Crit: Gain free attack.",
   "MB.DefendFumbleText": "Fumble: Take x2 damage, armor reduced one tier.",
   "MB.Description": "Description",
@@ -230,6 +232,7 @@
   "MB.WeaponTypeMelee": "Melee",
   "MB.WeaponTypeRanged": "Ranged",
   "MB.Wield": "Wield",
+  "MB.WieldButtonTitle": "Wield this power",
   "MB.WieldAPower": "Wield a Power",
   "MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
   "MB.WieldAPowerFumble": "Fumble - Roll an Arcane Catastrophe.",
