--- a/lang/en.json
+++ b/lang/en.json
@@ -125,6 +125,9 @@
   "MB.ItemWeaponType": "Weapon Type",
   "MB.JournalSheet": "MÖRK BORG Journal Sheet",
   "MB.Miseries": "Miseries",
+  "MB.MiseryActivated": "⛧⛧⛧ Misery ⛧⛧⛧",
+  "MB.MiseryCheck": "Misery Check",
+  "MB.MiseryNotActivated": "No misery, for now...",
   "MB.Miss": "MISS",
   "MB.Modified": "Modified",
   "MB.Morale": "Morale",
